# remynder

./: Cargo.toml
src/: addcards.rs  browse.rs  choose_category.rs  main.rs  review.rs  ui_library.rs  utils.rs  x.json
src/popups/: add_card.rs  card_finder.rs  cardviewer.rs  choose_cardaction.rs  choose_category.rs  choose_filter.rs  mod.rs  review_card.rs
src/tabs/: addcards.rs  browse.rs  import.rs  incread.rs  mod.rs  review.rs  stats.rs
src/utils/: mod.rs  text_display.rs  text_input.rs
src/widgets/: dependencies.rs  enum_choice.rs  file_finder.rs  mod.rs  table_thing.rs
