[package]
name = "remynder"
version = "0.1.0"
edition = "2021"
description = "flashcards in terminal and stuff"
license = "MIT OR Apache-2.0"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
speki-backend = "0.1.5"
tordir = "0.1.0"

sentry = { version = "0.31.7", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.108"
mischef = "0.1.12"
tui-textarea = "0.3.1"
tui-tree-widget = "0.15.0"
