[package]
name = "remynder"
version = "0.1.1"
edition = "2021"
description = "flashcards in terminal and stuff"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
speki-backend = { path = "/Users/tor/prog/rust/clispeki/speki-backend" }
tordir = "0.1.3"

sentry = { version = "0.31.7", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.108"
tui-textarea = "0.3.1"
tui-tree-widget = "0.15.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.3"
mischef = { path = "/Users/tor/prog/rust/mischef" }
rand = "0.8.5"
rodio = "0.17.3"
once_cell = "1.18.0"
dirs = "5.0.1"
vedvaring = "0.1.9"
derive_more = "0.99.17"
